--- a/_posts/2018-09-22-project-3.markdown
+++ b/_posts/2018-09-22-project-3.markdown
@@ -4,7 +4,7 @@ modal-id: 3
 date: 2018-03-01
 title: AANGEL Android application
 img: aangel-project-header.jpg
-detail-img: aangel.png
+detail-img: AAngel-featured.png
 alt: image-alt
 project-date: 2018
 client: Biophilia
