--- a/_posts/2018-09-22-project-6.markdown
+++ b/_posts/2018-09-22-project-6.markdown
@@ -4,12 +4,12 @@ modal-id: 6
 date: 2018-09-22
 title: Notch Pioneer iOS Application
 img: notch-project-header.jpg
-detail-img: epg-featured.png
+detail-img: notch-featured.png
 alt: image-alt
 project-date: 2018
 client: Notch Interfaces Inc
 category: iOS Development
-description: Notch Pioneer allows to record and replay movements recorded with the Notch motion capture system, export movement data and manage your Notch devices.
+description: Notch Pioneer allows to record and replay movements recorded with the Notch motion capture system, export movement data and manage your Notch devices. The data is recorded with the standalone Notch harware kit and communicated through using Bluetooth connection. <p>Beside improving the app stability and develop continously new features I'm also involved to review, maintain & document the iOS SDK</p>
 responsibility: Continously evolve the app, adjust latest firmware updates
 technologies: Swift
 download-ios: https://goo.gl/19CBte
