--- a/_posts/2018-09-22-project-10.markdown
+++ b/_posts/2018-09-22-project-10.markdown
@@ -2,13 +2,13 @@
 layout: default
 modal-id: 10
 date: 2017-09-01
-title: Confidental project for Daimler
+title: Confidential project for Daimler
 img: mb-project-header.jpg
 alt: image-alt
 project-date: 2017
 client: Daimler
 category: iOS
-description: In 2017 I had the oppurtunity to work in New York and then in Californa (at Mercedes Benz Research Facility) on one of their confidental project. In the project we collected various information about the users driving behaviours and created various feedbacks and charts. Unfortunately more information is strictly confidental.
+description: In 2017 I had the oppurtunity to work in New York and then in Californa (at Mercedes Benz Research Facility) on one of their confidental project. In the project we collected various information about the users driving behaviours and created various feedbacks and charts. Unfortunately more information is strictly confidential.
 responsibility: Sole iOS developer
 technologies: Swift
 
