--- a/_posts/2018-09-22-project-7.markdown
+++ b/_posts/2018-09-22-project-7.markdown
@@ -9,7 +9,7 @@ alt: image-alt
 project-date: 2015
 client: Makeitappen GmbH
 category: Android development
-description: The FIFA Weekly (currently named FIFA 1904) is a magazine for smartphones, where users can read the official FIFA weekly issues in a handy, comfortable way, moreover the text can be read out loud by using the Text to Speech service of the system. The issues are automatically downloaded and cached along with the media files for offline use. The app is published under the name of the FIFA.
+description: The FIFA Weekly (currently named FIFA 1904) is a magazine for smartphones, where users can read the official FIFA weekly issues in a handy, comfortable way, moreover the text can be read out loud by using the Text to Speech service of the system. The issues are automatically downloaded and cached along with the media files for offline use. The app is published by the FIFA.
 responsibility: Teamleader of 2 developers
 technologies: JAVA
 download-android: https://goo.gl/wCuLGF
