--- a/_posts/2018-09-22-project-9.markdown
+++ b/_posts/2018-09-22-project-9.markdown
@@ -2,7 +2,7 @@
 layout: default
 modal-id: 9
 date: 2018-04-01
-title: External Digital Consultant to McKinsey
+title: External Digital Consultant to one of the Big Three consulting companies
 img: mck-project-header.jpg
 alt: image-alt
 project-date: 2015-2018
